# Tpam_simulator

./: README.md
src/palletrone_cmd/: CMakeLists.txt
src/palletrone_cmd/launch/: pt_launch.py
src/palletrone_cmd/scripts/: teleop_position_node.py
src/palletrone_cmd/src/: position_cmd.cpp
src/palletrone_controller/: CMakeLists.txt  package.xml
src/palletrone_controller/src/: allocator_controller.cpp  torque_dob.cpp  wrench_controller.cpp
src/palletrone_interfaces/msg/: Cmd.msg  PalletroneState.msg
src/plant/plant/: plant.py
src/plant/xml/: Palletrone.xml
